<resources>
    <string name="app_name">PianoGrupo02</string>
    <string name="piano_grupo_02">Piano Grupo 02</string>
    <string name="hamilton_rafael_solis_pinzon">HAMILTON RAFAEL SOLIS PINZON</string>
    <string name="jaime_alberto_portillo_luna">JAIME ALBERTO PORTILLO LUNA</string>
<<<<<<< HEAD
    <string name="doNota">DO</string>
    <string name="re">RE</string>
    <string name="mi">MI</string>
    <string name="fa">FA</string>
    <string name="sol">SOL</string>
    <string name="la">LA</string>
    <string name="si">SI</string>
    <string name="cambiar_tipo_de_piano">Cambiar tipo de piano</string>
    <string name="salir">Salir</string>
    <string name="acerca_de">Acerca de</string>
=======
>>>>>>> 3cbf9cc (initial commit)
</resources>