<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1E1E1E"
    android:orientation="horizontal"
    android:padding="2dp"
    android:paddingStart="2dp"
    android:paddingLeft="2dp"
    android:paddingTop="2dp"
    android:paddingEnd="2dp"
    android:paddingRight="2dp"
    android:paddingBottom="2dp"
    tools:context=".Piano_tradicional">

    <Button
        android:id="@+id/bntNotaDo"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="102dp"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_weight="1"
        android:width="10dp"
        android:backgroundTint="#FFFFFF"
        android:onClick="btnNotaDo_onClick"
        android:text="@string/doNota"
        android:textColor="#0E0E0E"
        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/bntNotaRe"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="108dp"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_weight="1"
        android:backgroundTint="#F8F6F6"
        android:onClick="btnNotaRe_onClick"
        android:text="@string/re"
        android:textColor="#101010" />

    <Button
        android:id="@+id/bntNotaMi"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_weight="1"
        android:backgroundTint="#FFFFFF"
        android:onClick="btnNotaMi_onClick"
        android:text="@string/mi"
        android:textColor="#0E0E0E"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/button13"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="103dp"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_weight="1"
        android:backgroundTint="#F8F6F6"
        android:onClick="btnNotaFa_onClick"
        android:text="@string/fa"
        android:textColor="#101010"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/button14"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="98dp"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_weight="1"
        android:backgroundTint="#FFFFFF"
        android:onClick="btnNotaSol_onClick"
        android:text="@string/sol"
        android:textColor="#0E0E0E"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/button16"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="102dp"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_weight="1"
        android:backgroundTint="#F8F6F6"
        android:onClick="btnNotaLa_onClick"
        android:text="@string/la"
        android:textColor="#101010"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/button17"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="142dp"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_weight="1"
        android:backgroundTint="#FFFFFF"
        android:onClick="btnNotaSi_onClick"
        android:text="@string/si"
        android:textColor="#0E0E0E" />
</LinearLayout>